ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress2
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/add-base-url: "true"

    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.global-static-ip-name: web-static-ip

spec:
  rules:
  - http:
      paths:
      - path: /nodejs-service
        pathType: Prefix
        backend:
          service:
            name: nodejs-service
            port:
              number: 80
      - path: /mysql-service
        pathType: Prefix
        backend:
          service:
            name: mysql-service
            port:
              number: 3306 # Ensure this matches the targetPort of react-app-service
      - path: /mongo-service
        pathType: Prefix
        backend:
          service:
            name: mongo-service
            port:
              number: 27017 # Ensure this matches the targetPort of react-app-service
